      01/22/2010
  e - Commited changes that will allow TORQUE to compile on the Solaris5 platform
      with gcc-warnings enabled.
  b - No longer overwrites the user's environment when spoolasfinalname is set.
      Now the environment is handled correctly.
  b - No longer will segfault if pbs_mom restarts in a bad state (user environment 
      not initialized)

2.4.4
  b - fixed contrib/init.d/pbs_mom so that it doesn't overwrite $args defined in
      /etc/sysconfig/pbs_mom
  b - when spool_as_final_name is configured for the mom, no longer send email 
      messages about not being able to copy the spool file
  b - when spool_as_final_name is configured for the mom, correctly substitue 
      job environment variables
  f - added logging for email events, allows the admin to check if emails are 
      being sent correctly
  b - Made a fix to svr_get_privilege(). On some architectures a non-root user
      name would be set to null after the line " host_no_port[num_host_chars] = 0;"
      because num_host_chars was = 1024 which was the size of hot_no_port. 
      The null termination needed to happen at 1023. There were other problems
      with this function so code was added to  validate the incoming
      variables before they were used. The symptom of this bug was that non-root
      managers and operators could not perform operations where they should 
      have had rights.
  b - Missed a format statement in an sprintf statement for the bug fix above.
  b - Fixed a way that a file descriptor (for the server lockfile) could be used without 
      initialization. RT 6756

2.4.3
  b - fix PBSD_authenticate so it correctly splits PATH with : instead of ;
      (bugzilla #33)
  e - Refactored tcp_dis function calls. With the removal of the global variable
      dis_buffer the seperation of dis calls was no longer needed. the tcp_dis
      function calls have been removed and all calls go to the dis functions
      whether using tcp or rpp.